@@ -11,11 +11,13 @@ import demo.demo_back.repository.CommentRepository;
 import demo.demo_back.repository.UserRepository;
 import demo.demo_back.service.CommentService;
 
+import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -42,16 +44,7 @@ public class CommentServiceImpl implements CommentService {
 
         Comment saved = commentRepository.save(comment);
 
-        return CommentResponseDto.builder()
-                .id(saved.getId())
-                .userId(user.getId())
-                .boardId(board.getId())
-                .content(saved.getContent())
-                .createdAt(saved.getCreatedAt())
-                .updatedAt(saved.getUpdatedAt())
-                .isDeleted(saved.isDeleted())
-                .deletedAt(saved.getDeletedAt())
-                .build();
+        return toDto(saved);
     }
 
     @Override
@@ -59,50 +52,66 @@ public class CommentServiceImpl implements CommentService {
         List<Comment> comments = commentRepository.findByBoardId(boardId);
 
         return comments.stream()
-                .map(comment -> CommentResponseDto.builder()
-                        .id(comment.getId())
-                        .userId(comment.getUser().getId())
-                        .boardId(comment.getBoard().getId())
-                        .content(comment.getContent())
-                        .createdAt(comment.getCreatedAt())
-                        .updatedAt(comment.getUpdatedAt())
-                        .isDeleted(comment.isDeleted())
-                        .deletedAt(comment.getDeletedAt())
-                        .build())
-                .toList();
+                .map(this::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     public CommentResponseDto updateComment(Long boardId, Long commentId, Long userId, String newContent) {
-        Board board = boardRepository.findById(boardId)
+        boardRepository.findById(boardId)
                 .orElseThrow(() -> new BoardNotFoundException(boardId));
 
         Comment comment = commentRepository.findById(commentId)
                 .orElseThrow(() -> new RuntimeException("댓글을 찾을 수 없습니다."));
 
         if (!comment.getUser().getId().equals(userId)) {
-            System.out.println("요청자 ID: " + userId);
-            System.out.println("댓글 작성자 ID: " + comment.getUser().getId());
-
             throw new UnauthorizedException("자신의 댓글만 수정할 수 있습니다.");
         }
 
-        comment.setContent(newContent); // 댓글 내용 수정
-        comment.setUpdatedAt(LocalDateTime.now()); // 수정 시각 업데이트
+        comment.setContent(newContent);
+        comment.setUpdatedAt(LocalDateTime.now());
 
-        Comment saved = commentRepository.save(comment);
-
-        return CommentResponseDto.builder()
-                .id(saved.getId())
-                .userId(saved.getUser().getId())
-                .boardId(saved.getBoard().getId())
-                .content(saved.getContent())
-                .createdAt(saved.getCreatedAt())
-                .updatedAt(saved.getUpdatedAt())
-                .isDeleted(saved.isDeleted())
-                .deletedAt(saved.getDeletedAt())
-                .build();
+        return toDto(commentRepository.save(comment));
     }
 
+    @Override
+    public void deleteComment(Long boardId, Long commentId, Long userId) {
+        boardRepository.findById(boardId)
+                .orElseThrow(() -> new BoardNotFoundException(boardId));
 
+        Comment comment = commentRepository.findById(commentId)
+                .orElseThrow(() -> new RuntimeException("댓글을 찾을 수 없습니다."));
+
+        if (!comment.getUser().getId().equals(userId)) {
+            throw new UnauthorizedException("자신의 댓글만 삭제할 수 있습니다.");
+        }
+
+        comment.setDeleted(true);
+        comment.setDeletedAt(LocalDateTime.now());
+        commentRepository.save(comment);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<CommentResponseDto> getCommentsByUserId(Long userId) {
+        List<Comment> comments = commentRepository.findByUserId(userId);
+
+        return comments.stream()
+                .map(this::toDto)
+                .collect(Collectors.toList());
+    }
+
+    // ✅ 중복 제거용 private 메서드
+    private CommentResponseDto toDto(Comment comment) {
+        return CommentResponseDto.builder()
+                .id(comment.getId())
+                .userId(comment.getUser().getId())
+                .boardId(comment.getBoard().getId())
+                .content(comment.getContent())
+                .createdAt(comment.getCreatedAt())
+                .updatedAt(comment.getUpdatedAt())
+                .isDeleted(comment.isDeleted())
+                .deletedAt(comment.getDeletedAt())
+                .build();
+    }
 }
